--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   namespace: bergentroll
   description: Training db role for OTUS Reddit app
   company: null
-  license: MIT
+  license: CC0
   min_ansible_version: 2.1
 
   platforms:
