--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,26 @@
 ---
-language: python
-python: "2.7"
 
-# Use the new container infrastructure
-sudo: false
+jobs:
+  include:
+    - language: python
+      python: '2.7'
+      sudo: false
+      addons:
+        apt:
+          packages:
+          - python-pip
+      install:
+        - pip install ansible
+        - ansible --version
+        - printf '[defaults]\nroles_path=../' >ansible.cfg
+      script:
+        - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
 
-# Install ansible
-addons:
-  apt:
-    packages:
-    - python-pip
-
-install:
-  # Install ansible
-  - pip install ansible
-
-  # Check ansible version
-  - ansible --version
-
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
-
-script:
-  # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
-
-notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+    - language: python
+      python: '3.6'
+      install:
+      - pip install ansible==2.3.0 molecule apache-libcloud
+      script:
+      - molecule --debug test
+      after_script:
+      - molecule --debug destroy
