Update Molecule conf to use GCE

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,11 +1,25 @@
 ---
+
 dependency:
   name: galaxy
 driver:
-  name: vagrant
+  name: gce
+  project_id: main-boulevard-332316
+  region: us-central1
+  network_name: default
+  subnetwork_name: default
+  auth_kind: serviceaccount
+  # TODO
+  service_account_file: ~/sources/otus-devops/bergentroll_role_db/gkey.json
+  external_access: true
+  instance_os_type: linux
+
 platforms:
-  - name: instance
-    box: generic/ubuntu1604
+  - name: molecule-role-db-test
+    machine_type: e2-standard-2
+    preemptible: true
+    zone: us-central1-a
+    image: projects/ubuntu-os-cloud/global/images/family/ubuntu-minimal-1604-lts
 provisioner:
   name: ansible
   lint:
