--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,14 @@ jobs:
   include:
   - name: Syntax check
     language: python
-    python: '2.7'
-    addons:
-      apt:
-        packages:
-        - python-pip
+    python: '3.6'
     install:
     - pip install ansible
     - ansible --version
     - printf '[defaults]\nroles_path=../' >ansible.cfg
     script:
     - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+
   - name: Test with Molecule
     language: python
     python: '3.6'
@@ -23,7 +20,7 @@ jobs:
       - openssl aes-256-cbc -K $encrypted_749dcc9e92f7_key -iv $encrypted_749dcc9e92f7_iv
         -in credentials.json.enc -out credentials.json -d
     install:
-    - pip install ansible==2.3.0 molecule molecule-gce apache-libcloud
+    - pip install ansible molecule molecule-gce apache-libcloud
     script:
     - molecule --debug test
     after_script:
