--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jobs:
   - name: Syntax check
     language: python
     python: '3.8'
+    env:
+      - ANSIBLE_ROLES_PATH="$TRAVIS_BUILD_DIR"
     install:
       - pip install ansible
       - ansible --version
